--- a/templates/yarss2.j2
+++ b/templates/yarss2.j2
@@ -8,7 +8,7 @@
       "max_download_speed": -2,
       "key": "0",
       "regex_include_ignorecase": true,
-      "download_location": "{{ download_location }}",
+      "download_location": "{{ locations.downloading }}",
       "max_upload_slots": -2,
       "max_connections": -2,
       "ignore_timestamp": false,
@@ -20,24 +20,24 @@
       "custom_text_lines": "",
       "regex_exclude_ignorecase": true,
       "email_notifications": {},
-      "move_completed": "{{ move_completed }}",
+      "move_completed": "{{ locations.completed }}",
       "active": true,
       "sequential_download": "Default",
       "regex_include": "{{ regex_include }}",
       "regex_exclude": "",
       "name": "{{ subscription_name }}",
       "add_torrents_in_paused_state": "Default",
-      "rssfeed_key": "{{ rssfeed_key }}"
+      "rssfeed_key": "{{ rssfeed.key }}"
     }
   },
   "email_messages": {},
   "rssfeeds": {
     "0": {
       "key": "0",
-      "name": "{{ rssfeed_name }}",
+      "name": "{{ rssfeed.name }}",
       "url": "{{ rssfeed_url }}",
       "prefer_magnet": false,
-      "site": "{{ rssfeed_site }}",
+      "site": "{{ rssfeed.site }}",
       "last_update": "{{ ansible_date_time.iso8601 }}",
       "active": true,
       "user_agent": "",
