--- a/docs/_includes/hero.html
+++ b/docs/_includes/hero.html
@@ -1,5 +1,5 @@
 <div class="center lg-py3 p4 bg-cover bg-center white bg-gray"
-  style="background-image: url(/assets/images/rpi.jpg);box-shadow: 0px 2px 4px #888888;">
+  style="background-image: url({{ '/assets/images/rpi.jpg' | relative_url }});box-shadow: 0px 2px 4px #888888;">
   <div style="text-shadow: 1px 1px 3px #000;">
     <div class="flex justify-center">
       <!-- <div class="px1 xs-hide sm-hide">
