fix typo in stylkesheet name

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,7 +14,7 @@
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-NN954G2');</script>
   <!-- End Google Tag Manager -->
-  <link rel="stylesheet" href="{{ 'assets/css/style.css' | relative_url }}" />
+  <link rel="stylesheet" href="{{ 'assets/css/styles.css' | relative_url }}" />
   <!-- {% feed_meta %} -->
   {% seo %}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
