--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,16 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <title>{{ page.title }}</title>
-  <!-- Google Tag Manager -->
-  <script>(function (w, d, s, l, i) {
-      w[l] = w[l] || []; w[l].push({
-        'gtm.start':
-          new Date().getTime(), event: 'gtm.js'
-      }); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-NN954G2');</script>
-  <!-- End Google Tag Manager -->
+  {% if site.google_analytics and jekyll.environment == 'production' %}
+  {% include analytics.html %}
+  {% endif %}
   <link rel="stylesheet" href="{{ 'assets/css/styles.css' | relative_url }}" />
   <!-- {% feed_meta %} -->
   {% seo %}
@@ -27,10 +20,6 @@
 </head>
 
 <body class="flex flex-column">
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NN954G2" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
   <div style="flex:1;">
     {% include notification_bar.html %}
     {{ content }}
