--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8" />
   <title>{{ page.title }}</title>
-  <meta name="description" content="">
+  <meta name="description" content="Simple automation script to provision Raspbery Pi devices as Torrent Boxes.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
