--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -1,7 +1,44 @@
-body {
-  min-height: 100vh;
+// html,
+// body {
+//   width: 100%;
+//   height: 100%;
+// }
+
+// body {
+// display: flex;
+// min-height: 100vh;
+// flex-direction: column;
+// }
+
+.full-height {
+  height: 100vh;
+}
+
+.overflow-y-auto {
+  overflow-y: auto;
+}
+
+.main {
+  // flex: 1;
+  // display: flex;
+  // overflow: hidden;
+  height: 100vh;
+}
+
+.nested {
+  counter-reset: item;
 }
 
 figcaption {
   font-size: 14px;
+}
+
+.notification {
+  a {
+    text-decoration: none;
+    color: white;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
